fix(activity): filter Fixed filter overflow

--- a/src/components/SimpleSelectFilter/styles.scss
+++ b/src/components/SimpleSelectFilter/styles.scss
@@ -21,7 +21,7 @@
     .bx--select-input {
       background-color: $teal-20;
       border-radius: 0.25rem;
-      width: 12rem;
+      width: 11rem;
       box-shadow: none;
       text-overflow: ellipsis;
     }
