--- a/src/features/WorkflowActivity/styles.scss
+++ b/src/features/WorkflowActivity/styles.scss
@@ -9,7 +9,8 @@
   }
 
   .bx--select-input {
-    width: 12rem;
+    width: 11rem;
+    margin-right: 1rem;
   }
 
   .b-search-filter {
